job: Honor attribute mask in query info

Unwanted attributes are sent from some backends (e.g. ftp), because
g_file_info_copy_info is used and thus source attribute matcher is replaced.
Apply attribute mask before sending as it is done in gvfsjobeneumerate
to fix this issue.

https://bugzilla.gnome.org/show_bug.cgi?id=745212